tests/src/frontend/syntax/invalid/fat_arrow_instead_of_light.sk
fun main(): String {
  _ = Vec [1, 2, 3].map(e => e + 1);
  ""
}
